Resolving MJ ingest.py v2

--- a/n6_agents.ipynb
+++ b/n6_agents.ipynb
@@ -413,6 +413,216 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ollama functions Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_experimental.llms.ollama_functions import OllamaFunctions\n",
+    "\n",
+    "llm = OllamaFunctions(model=\"llama3\", temperature=0) #, format=\"json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "dir_path = \"/Users/vinaytanwer/Desktop/Projects/Chatbots/langchain/apps/mj-app/packages/neo4j-advanced-rag\"\n",
+    "mj_docs_dir = os.path.join(dir_path, \"mj_scraper/mj_docs/final\")\n",
+    "file_name = \"terms-of-service.txt\"\n",
+    "txt_path = os.path.join(mj_docs_dir, file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_text_splitters import TokenTextSplitter\n",
+    "from langchain_community.document_loaders import TextLoader\n",
+    "\n",
+    "# Load the text file\n",
+    "loader = TextLoader(str(txt_path))\n",
+    "documents = loader.load()\n",
+    "\n",
+    "# Ingest Parent-Child node pairs\n",
+    "parent_splitter = TokenTextSplitter(chunk_size=1500, chunk_overlap=250)\n",
+    "parent_documents = parent_splitter.split_documents(documents)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(parent_documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from typing import List\n",
+    "\n",
+    "class Questions(BaseModel):\n",
+    "    \"\"\"Generating hypothetical questions about text.\"\"\"\n",
+    "\n",
+    "    questions: List[str] = Field(\n",
+    "        ...,\n",
+    "        description=(\n",
+    "            \"Generated hypothetical questions based on the information from the text\"\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "questions_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            (\n",
+    "                \"You are generating hypothetical questions based on the information \"\n",
+    "                \"found in the text. Make sure to provide full context in the generated \"\n",
+    "                \"questions.\"\n",
+    "            ),\n",
+    "        ),\n",
+    "        (\n",
+    "            \"human\",\n",
+    "            (\n",
+    "                \"Use the given format to generate hypothetical questions from the \"\n",
+    "                \"following input: {input}\"\n",
+    "            ),\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "question_chain = questions_prompt | llm.with_structured_output(Questions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = parent_documents[2].page_content\n",
+    "# print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['What is the time frame for resolving a dispute within this agreement?', 'How does the arbitration process work in this agreement?', 'What are the consequences if a party fails to resolve a dispute within 30 days?', 'What is the governing law of this agreement?', 'What happens if a party violates the Community Guidelines or other inappropriate use of the Service?', 'Can a party cancel their plan at any time, and what are the implications?', \"How does the indemnification process work in case of third-party claims arising from a party's use of the Services and Assets?\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "questions = question_chain.invoke({\"input\":text})\n",
+    "print(questions.questions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Define Summary Generation Retrieval Chain\n",
+    "\n",
+    "class Summary(BaseModel):\n",
+    "    \"\"\"Generating hypothetical questions about text.\"\"\"\n",
+    "\n",
+    "    summary: str = Field(\n",
+    "        description=(\n",
+    "            \"Generated summary for the information from the text\"\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "summary_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            (\n",
+    "                \"You are expert in Summary writing. You are generating accurate summary for the input provided in the text.\"\n",
+    "                \"Output should be a single key 'summary'\"\n",
+    "            ),\n",
+    "        ),\n",
+    "        (\n",
+    "            \"human\",\n",
+    "            (\n",
+    "                \"Generate summary for the following input: {input}\"\n",
+    "            ),\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "summary_chain = summary_prompt | llm.with_structured_output(Summary)\n",
+    "# summary_chain = summary_prompt | llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Summary(summary=\"By using Midjourney's Services, users grant a perpetual license to reproduce, prepare derivative works, publicly display, publicly perform, sublicense, and distribute text and image prompts. The license survives termination of the Agreement by any party. Users also grant permission for others to remix their images and prompts in public settings. Stealth mode is available for certain subscription plans, but does not guarantee complete privacy. The Services have a DMCA and Takedowns Policy, which outlines procedures for reporting copyright infringement. Disputes will be resolved through binding arbitration.\")"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = parent_documents[1].page_content\n",
+    "summary = summary_chain.invoke({\"input\":text})\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -431,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
