--- a/n9_tool_calling_llamacpp.ipynb
+++ b/n9_tool_calling_llamacpp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,14 +91,14 @@
       "  },\n",
       "  \"phone_number\": \"+1 (234) 567-8901\",\n",
       "  \"email\": \"john.doe@example.com\"\n",
-      "}"
+      "}\n"
      ]
     }
    ],
    "source": [
     "response = llm.invoke(\"Describe a person in JSON format:\")\n",
     "# print(response, '\\n')\n",
-    "# print(response.content)"
+    "print(response.content)"
    ]
   },
   {
@@ -1270,6 +1270,13 @@
     "\n",
     "defintn.dict()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
