--- a/n1_llm_langchain.ipynb
+++ b/n1_llm_langchain.ipynb
@@ -298,6 +298,50 @@
    "source": [
     "print(result['output'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "response = requests.post(\n",
+    "    \"http://localhost:8000/mj-rag/invoke\",\n",
+    "    json={'input': {'question':\"How to generate image in midjourney?\"}}\n",
+    ")\n",
+    "result = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'output': 'According to the context, to generate an image in Midjourney:\\n\\n1. Go to your Create feed.\\n2. Search for a prompt text or parameters.\\n3. Click on the \"Rerun\" button next to each prompt to repeat the job and generate a new image.\\n\\nAlternatively, you can also use the additional actions available when hovering over a prompt or clicking on an image:\\n\\n* Vary Subtle or Vary Strong buttons\\n* Use: Copy this prompt to the imagine bar to quickly reuse or tweak it.\\n* Job Type: Manually copy prompt details, including the image URL and prompt, to use in your own generations.',\n",
+       " 'metadata': {'run_id': '41b6b218-3b0a-4c99-a58d-6a11c616cb78',\n",
+       "  'feedback_tokens': []}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
