Added streamlit memory bot app

--- a/n3_chatbot_langchain.ipynb
+++ b/n3_chatbot_langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Why did the scarecrow win an award?\n",
+      "Why couldn't the bicycle stand up by itself?\n",
       "\n",
-      "Because he was outstanding in his field!\n",
+      "Because it was two-tired!\n",
       "\n",
-      "Hope that made you smile! Do you want to hear another one?\n"
+      "(Sorry, I know it's a bit of a \"dad\" joke, but I hope it brought a smile to your face!)\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,16 +1145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parent run 2eba6283-61a7-4084-b1a7-42dfd5398cba not found for run 856cb329-6876-468e-a4af-4b435ba72142. Treating as a root run.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Why did the scarecrow win an award? Because he was outstanding in his field! (get it?)'"
+       "'Why did the computer go to the doctor? It had a virus!'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,16 +1176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parent run 63e464a8-07a9-459d-a352-ed388cafa3a8 not found for run 46002925-beee-4c6e-9450-763df6609f91. Treating as a root run.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'The joke\\'s about a scarecrow winning an award for being great at his job, \"outstanding in his field\"!'"
+       "'I told two jokes! The first one was about a scarecrow, and the second one was about a computer getting a \"virus\"'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,6 +1727,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from langchain_community.chat_models.ollama import ChatOllama\n",
+    "llm = ChatOllama(model=\"llama3\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"Here's one:\\n\\nWhy couldn't the bicycle stand up by itself?\\n\\n(Wait for it...)\\n\\nBecause it was two-tired!\\n\\nHope that made you smile! Do you want to hear another one?\", response_metadata={'model': 'llama3', 'created_at': '2024-07-13T21:01:15.426964Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'prompt_eval_count': 14, 'prompt_eval_duration': 92904000, 'eval_count': 41, 'eval_duration': 673141000}, id='run-dc19a906-becd-40f5-914c-c37f2d81d565-0')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(\"Tell me a joke\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1735,7 +1780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
